src/styles/hero.css
@import url("../styles/animation-up-down.css");

@import url("../styles/animation-flicker.css");
@import url("../styles/animations-slides.css");

.hero {
	transition: 0.9s ease;
	display: flex;
	height: 752px;
	background: linear-gradient(var(--gradient));
	flex-direction: column;
	z-index: 2;
	justify-content: space-evenly;
}

.hero__contenedor {
	display: flex;
	flex-direction: column-reverse;
	height: 56vh;
	align-items: center;
	justify-content: center;
}

.hero__saludo {
	height: auto;
}

.hero__titulo {
	font-family: "Montserrat", sans-serif;
	transition: all 0.9s;
	color: var(--seccond-color);
	font-size: 4.3rem;
	text-align: center;
	font-weight: bold;
	filter: drop-shadow(2 -1px 1px var(--pure-black));
}

.hero__titulo span {
	transition: all 0.9s;
}

.hero__titulo span:hover {
	color: var(--blue);
	filter: drop-shadow(0 0 12px var(--blue));
}

.flicker-in-1 {
	animation: flicker-in-1 2s linear 0.5s both;
	color: var(--seccond-color);
}

.hero__subtitulo {
	font-size: 1.5rem;
	font-weight: 400;
	font-family: var(--fira-code);
	color: #ffffff;
	padding: 0;
	margin-top: -3rem;
	text-align: center;
}

.side__container {
	transition: all 0.9s;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	width: 100%;
}

/* Foto de perfil */
.side__profile {
	display: flex;
	align-items: center;
	position: relative;
}

.side__img {
	min-width: 28rem;
	width: 60%;
	position: relative;
	max-width: 29rem;
}

.img__damage {
	display: none;
}

.img__dark {
	display: none;
}

.img__ligth {
	display: block;
}

.social {
	display: flex;
	flex-direction: row;
	gap: 16px;
	position: absolute;
	z-index: 80;
}

.social__link {
	position: absolute;
	z-index: 20;
}

.social__icon {
	width: 8.4rem;
	filter: drop-shadow(0 0 12px var(--seccond-color));
	transition: 0.2s ease-in-out;
}

.github {
	bottom: 32px;
	right: 82px;
	transform: translateY(-200px);
	animation: slideIn 1s ease-in-out forwards;
}

.social__icon:hover {
	animation: anim none;
}

.github .social__icon {
	width: 55px;
}

.alura {
	filter: invert(30%) sepia(100%) saturate(1072%) hue-rotate(180deg) brightness(96%) contrast(97%) drop-shadow(0 0 3px var(--pure-black));
	bottom: -102px;
	right: 115px;
	transform: translateY(-600px);
	animation: expand 0.8s ease forwards;
}

.alura .social__icon {
	width: 30px;
}

.linkedin {
	filter: invert(30%) sepia(100%) saturate(1072%) hue-rotate(180deg) brightness(96%) contrast(97%) drop-shadow(0 0 3px var(--pure-black));
	bottom: -75px;
	right: -141px;
	transform: translateY(-300px);
	animation: expand 0.8s ease forwards;
}

.linkedin .social__icon {
	width: 4.7rem;
}

.platzi {
	filter: invert(53%) sepia(39%) saturate(3085%) hue-rotate(64deg) brightness(100%) contrast(101%);
	bottom: 50px;
	right: -124px;
	transform: translateY(-300px);
	animation: expand 1.5s ease-in-out forwards;
}
.platzi .social__icon {
	width: 53px;
}
.youtube {
	bottom: -208px;
	right: -33px;
	transform: translateY(500px);
	animation: expand 0.6s ease-in-out forwards 0.8s;
}
.youtube .social__icon {
	width: 8rem;
}

/* VISTA DESKTOP */

@media (min-width: 768px) {
	.hero {
		height: 100vh;
		justify-content: space-around;
	}

	.side__img {
		min-width: 32rem;
		width: 55%;
	}

	.hero__contenedor {
		flex-direction: row;
		align-items: center;
		justify-content: space-evenly;
		width: 100%;
		flex-wrap: wrap;
		height: auto;
	}

	.hero__titulo {
		font-size: 6rem;
		font-weight: 900;
		padding: 0;
	}

	.hero__subtitulo {
		font-size: 2rem;
		font-weight: 400;
	}

	.side__container {
		flex-direction: column;
		justify-content: center;
		align-items: center;
		width: 60rem;
	}

	/* Social icons */
	.social {
		display: flex;
		flex-direction: column;
		gap: 16px;
	}

	.social__icon:hover {
		animation: anim none;
		transform: scale(1.3);
	}

	.social__link:hover {
		transform: scale(1.2);
	}

	.github {
		top: -168px;
		right: 103px;
	}

	.github .social__icon {
		width: 78px;
		animation: anim 4s infinite;
		animation-delay: 0.9s;
	}

	.alura {
		top: 19px;
		right: 119px;
	}

	.alura .social__icon {
		width: 3.7rem;
		animation: anim 3.4s infinite;
		animation-delay: 3s;
	}

	.linkedin {
		top: -20px;
		right: -173px;
	}

	.linkedin .social__icon {
		width: 5rem;
		animation: anim 3.3s infinite;
		animation-delay: 3.3s;
	}

	.platzi {
		top: -165px;
		right: -153px;
	}

	.platzi .social__icon {
		width: 56px;
		animation: anim 4s infinite;
		animation-delay: 3.1s;
	}

	.youtube {
		top: 112px;
		right: -33px;
		transform: rotate(-23deg);
	}

	.youtube .social__icon {
		animation: anim 4s infinite;
		animation-delay: 3.3s;
	}

	.alura .social__icon:hover,
	.platzi .social__icon:hover,
	.linkedin .social__icon:hover,
	.youtube .social__icon:hover,
	.github .social__icon:hover {
		animation: none;
	}
}

@media (min-width: 1200px) {
	.hero {
		height: 133vh;
		justify-content: center;
	}

	.hero__contenedor {
		justify-content: space-around;
		/* gap: 7rem; */
		margin-top: -12rem;
		flex-wrap: nowrap;
		max-width: 1920px;
	}

	.hero__titulo {
		font-size: 8rem;
		font-weight: 700;
	}

	.hero__subtitulo {
		font-size: 2rem;
	}

	.side__img {
		min-width: 25rem;
		width: 85%;
		max-width: 44rem;
	}

	.github {
		top: -214px;
		right: 117px;
	}

	.github .social__icon {
		width: 100px;
	}

	.alura {
		top: 44px;
		right: 160px;
	}

	.alura .social__icon {
		width: 5.4rem;
	}

	.linkedin {
		top: -20px;
		right: -216px;
	}

	.linkedin .social__icon {
		width: 65px;
	}

	.platzi {
		top: -239px;
		right: -146px;
	}

	.platzi .social__icon {
		width: 9rem;
	}

	.youtube {
		top: 181px;
		right: -44px;
	}


.youtube .social__icon {
	width: 12rem;
}
}

